Fixed navbar overflow.

--- a/style.css
+++ b/style.css
@@ -504,6 +504,7 @@ nav {
   display: flex;
   justify-content: space-between;
   overflow-x: auto;
+  overflow-y: hidden;
   white-space: nowrap;
 }
 
